[package]
name = "memo"
version = "0.1.0"
authors = ["Lonami Exo <totufals@hotmail.com>"]
edition = "2018"

[features]
patch-nops = ["iced-x86"]

[dependencies]
crossterm = "0.19.0"
winapi = { version = "0.3.9", features = ["psapi", "processthreadsapi", "handleapi", "memoryapi", "tlhelp32", "debugapi"] }
iced-x86 = { version = "1.10.3", optional = true }
